project2_Parser/edu/purdue/cs352/minijava/parser/ParserAST.java
/* ParserAST.java */
/* Generated By:JavaCC: Do not edit this line. ParserAST.java */
    package edu.purdue.cs352.minijava.parser;

    import edu.purdue.cs352.minijava.ast.*;
    import edu.purdue.cs352.minijava.*;
    import java.util.*;

    public class ParserAST implements ParserASTConstants {
        public static void main(String[] args) {
            ParserAST parser;

            if (args.length != 1) {
                System.out.println("Use: mjparse <input file>");
                return;
            }

            try {
                parser = new ParserAST(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try {
                parser.Program();
            } catch (ParseException ex) {
                System.out.println(ex.getMessage());
                return;
            }
        }

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
  final public List<Token> TokenList() throws ParseException {Token t;
    List<Token> tl = new ArrayList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:
      case KW_PUBLIC:
      case KW_STATIC:
      case KW_VOID:
      case KW_MAIN:
      case KW_STRING:
      case KW_EXTENDS:
      case KW_RETURN:
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_ELSE:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_RBRACE:
      case SYM_LPARENTHESE:
      case SYM_RPARENTHESE:
      case SYM_LBRACKET:
      case SYM_RBRACKET:
      case SYM_SEMICOLON:
      case SYM_EQUAL:
      case SYM_AND:
      case SYM_OR:
      case SYM_LESS:
      case SYM_LESSEQUAL:
      case SYM_EQUALEQUAL:
      case SYM_NOTEQUAL:
      case SYM_GREATER:
      case SYM_GREATEREQUAL:
      case SYM_PLUS:
      case SYM_MINUS:
      case SYM_MULTIPLICATION:
      case SYM_DIVIDE:
      case SYM_MOD:
      case SYM_NOT:
      case SYM_DOT:
      case SYM_COMMA:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Token();
tl.add(t);
    }
    jj_consume_token(0);
{if ("" != null) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public Token Token() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_CLASS:{
      jj_consume_token(KW_CLASS);
      break;
      }
    case KW_PUBLIC:{
      jj_consume_token(KW_PUBLIC);
      break;
      }
    case KW_STATIC:{
      jj_consume_token(KW_STATIC);
      break;
      }
    case KW_VOID:{
      jj_consume_token(KW_VOID);
      break;
      }
    case KW_MAIN:{
      jj_consume_token(KW_MAIN);
      break;
      }
    case KW_STRING:{
      jj_consume_token(KW_STRING);
      break;
      }
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      break;
      }
    case KW_RETURN:{
      jj_consume_token(KW_RETURN);
      break;
      }
    case KW_INT:{
      jj_consume_token(KW_INT);
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      break;
      }
    case KW_ELSE:{
      jj_consume_token(KW_ELSE);
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      break;
      }
    case KW_PRINT:{
      jj_consume_token(KW_PRINT);
      break;
      }
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      break;
      }
    case SYM_RBRACE:{
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case SYM_LPARENTHESE:{
      jj_consume_token(SYM_LPARENTHESE);
      break;
      }
    case SYM_RPARENTHESE:{
      jj_consume_token(SYM_RPARENTHESE);
      break;
      }
    case SYM_LBRACKET:{
      jj_consume_token(SYM_LBRACKET);
      break;
      }
    case SYM_RBRACKET:{
      jj_consume_token(SYM_RBRACKET);
      break;
      }
    case SYM_SEMICOLON:{
      jj_consume_token(SYM_SEMICOLON);
      break;
      }
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      break;
      }
    case SYM_AND:{
      jj_consume_token(SYM_AND);
      break;
      }
    case SYM_OR:{
      jj_consume_token(SYM_OR);
      break;
      }
    case SYM_LESS:{
      jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESSEQUAL:{
      jj_consume_token(SYM_LESSEQUAL);
      break;
      }
    case SYM_EQUALEQUAL:{
      jj_consume_token(SYM_EQUALEQUAL);
      break;
      }
    case SYM_NOTEQUAL:{
      jj_consume_token(SYM_NOTEQUAL);
      break;
      }
    case SYM_GREATER:{
      jj_consume_token(SYM_GREATER);
      break;
      }
    case SYM_GREATEREQUAL:{
      jj_consume_token(SYM_GREATEREQUAL);
      break;
      }
    case SYM_PLUS:{
      jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      jj_consume_token(SYM_MINUS);
      break;
      }
    case SYM_MULTIPLICATION:{
      jj_consume_token(SYM_MULTIPLICATION);
      break;
      }
    case SYM_DIVIDE:{
      jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      jj_consume_token(SYM_MOD);
      break;
      }
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      break;
      }
    case SYM_DOT:{
      jj_consume_token(SYM_DOT);
      break;
      }
    case SYM_COMMA:{
      jj_consume_token(SYM_COMMA);
      break;
      }
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
  }

// Grammar
  final public Program Program() throws ParseException {Main main;
    List<ClassDecl> cds = new ArrayList<ClassDecl>();
    ClassDecl temp;
    main = MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      temp = ClassDeclaration();
cds.add(temp);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(new Token(), main, cds);}
    throw new Error("Missing return statement in function");
  }

  final public Main MainClass() throws ParseException {Statement statement;
    Token tok;
    tok = jj_consume_token(KW_CLASS);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPARENTHESE);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LBRACKET);
    jj_consume_token(SYM_RBRACKET);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_RPARENTHESE);
    jj_consume_token(SYM_LBRACE);
    statement = Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new Main(tok, statement);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {Token clas, tok;
    String name = null, eggstends = null;
    VarDecl t1;
    MethodDecl t2;
    List<VarDecl> fields = new ArrayList<VarDecl>();
    List<MethodDecl> methods = new ArrayList<MethodDecl>();
    clas = jj_consume_token(KW_CLASS);
    tok = jj_consume_token(IDENTIFIER);
name = tok.toString();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      tok = jj_consume_token(IDENTIFIER);
eggstends = tok.toString();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      t1 = VarDeclaration();
fields.add(t1);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      t2 = MethodDeclaration();
methods.add(t2);
    }
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new ClassDecl(clas, name, eggstends, fields, methods);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {Token tok;
    Type type;
    String name;
    type = Type();
    tok = jj_consume_token(IDENTIFIER);
    jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return new VarDecl(tok, type, tok.toString());}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {Token tok, temp_tok;
    Type retType, temp_type;
    String name;
    Parameter t1;
    VarDecl   t2;
    Statement t3;
    List<Parameter> parameters = new ArrayList<Parameter>();
    List<VarDecl> vds = new ArrayList<VarDecl>();
    List<Statement> body = new ArrayList<Statement>();
    Exp retExp;
    jj_consume_token(KW_PUBLIC);
    retType = Type();
    tok = jj_consume_token(IDENTIFIER);
name = tok.toString();
    jj_consume_token(SYM_LPARENTHESE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:{
      temp_type = Type();
      temp_tok = jj_consume_token(IDENTIFIER);
parameters.add(new Parameter(new Token(),temp_type, temp_tok.toString()));
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        temp_type = Type();
        temp_tok = jj_consume_token(IDENTIFIER);
parameters.add(new Parameter(new Token(),temp_type, temp_tok.toString()));
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPARENTHESE);
    jj_consume_token(SYM_LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_LPARENTHESE:
      case SYM_NOT:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      if (jj_2_1(2)) {
        t2 = VarDeclaration();
vds.add(t2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPARENTHESE:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          t3 = Statement();
body.add(t3);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(KW_RETURN);
    retExp = Expression();
    jj_consume_token(SYM_SEMICOLON);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new MethodDecl(tok, retType, name, parameters, vds, body, retExp);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {Token tok;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:{
      tok = jj_consume_token(KW_INT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:{
        jj_consume_token(SYM_LBRACKET);
        jj_consume_token(SYM_RBRACKET);
{if ("" != null) return new TypeIntArray(tok);}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
{if ("" != null) return new TypeInt(tok);}
      break;
      }
    case KW_BOOLEAN:{
      tok = jj_consume_token(KW_BOOLEAN);
{if ("" != null) return new TypeBoolean(tok);}
      break;
      }
    case IDENTIFIER:{
      tok = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Type(tok, tok.toString());}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {Token tok;
    List<Statement> body = new ArrayList<Statement>();
    Statement s = null, ifS = null, elseS = null , t;
    Exp exp;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LBRACE:{
      tok = jj_consume_token(SYM_LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPARENTHESE:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_7;
        }
        t = Statement();
body.add(t);
      }
      jj_consume_token(SYM_RBRACE);
s = new BlockStatement(tok, body);
      break;
      }
    case KW_IF:{
      tok = jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPARENTHESE);
      exp = Expression();
      jj_consume_token(SYM_RPARENTHESE);
      ifS = Statement();
      if (jj_2_2(2)) {
        jj_consume_token(KW_ELSE);
        elseS = Statement();
      } else {
        ;
      }
s = new IfStatement(tok, exp, ifS, elseS);
      break;
      }
    case KW_WHILE:{
      tok = jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPARENTHESE);
      exp = Expression();
      jj_consume_token(SYM_RPARENTHESE);
      s = Statement();
s = new WhileStatement(tok, exp, s);
      break;
      }
    case KW_PRINT:{
      tok = jj_consume_token(KW_PRINT);
      jj_consume_token(SYM_LPARENTHESE);
      exp = Expression();
      jj_consume_token(SYM_RPARENTHESE);
      jj_consume_token(SYM_SEMICOLON);
s = new PrintStatement(tok, exp);
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPARENTHESE:
    case SYM_NOT:
    case IDENTIFIER:
    case INT_LITERAL:{
      exp = Expression();
      jj_consume_token(SYM_SEMICOLON);
s = new ExpStatement(new Token(), exp);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Exp Expression() throws ParseException {Exp exp = null;
    exp = AssignExpr();
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AssignExpr() throws ParseException {Exp target, value;
    target = LogicOp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      value = AssignExpr();
{if ("" != null) return new AssignExp(new Token(), target ,value);}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
{if ("" != null) return target;}
    throw new Error("Missing return statement in function");
  }

  final public Exp LogicOp() throws ParseException {Exp left;
    Exp right;
    Token tok;
    left = CmpOp();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:
      case SYM_OR:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:{
        tok = jj_consume_token(SYM_AND);
        break;
        }
      case SYM_OR:{
        tok = jj_consume_token(SYM_OR);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = CmpOp();
left = new BinaryExp(left, tok, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp CmpOp() throws ParseException {Exp left;
    Exp right;
    Token tok;
    left = AddOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:
      case SYM_LESSEQUAL:
      case SYM_NOTEQUAL:
      case SYM_GREATER:
      case SYM_GREATEREQUAL:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:{
        tok = jj_consume_token(SYM_LESS);
        break;
        }
      case SYM_LESSEQUAL:{
        tok = jj_consume_token(SYM_LESSEQUAL);
        break;
        }
      case SYM_NOTEQUAL:{
        tok = jj_consume_token(SYM_NOTEQUAL);
        break;
        }
      case SYM_GREATER:{
        tok = jj_consume_token(SYM_GREATER);
        break;
        }
      case SYM_GREATEREQUAL:{
        tok = jj_consume_token(SYM_GREATEREQUAL);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = AddOp();
left = new BinaryExp(left, tok, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  final public Exp AddOp() throws ParseException {Exp left;
    Exp right;
    Token tok;
    left = MulOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:{
        tok = jj_consume_token(SYM_PLUS);
        break;
        }
      case SYM_MINUS:{
        tok = jj_consume_token(SYM_MINUS);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = MulOp();
left = new BinaryExp(left, tok, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }
